despatma-dependency-container/tests/fail/constructor_argument_impl_trait.stderr
error: Only concrete types supported

         = help: Change this `impl` type to a concrete type

  --> tests/fail/constructor_argument_impl_trait.rs:16:17
   |
16 |     fn new(dal: impl DAL) {}
   |                 ^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `DependencyContainer`
  --> tests/fail/constructor_argument_impl_trait.rs:25:21
   |
25 |     let container = DependencyContainer::new(dal);
   |                     ^^^^^^^^^^^^^^^^^^^ use of undeclared type `DependencyContainer`
